--- a/src/app/negociomenu/negociomenu.component.html
+++ b/src/app/negociomenu/negociomenu.component.html
@@ -17,17 +17,17 @@
                 <i class="fa fa-bars active"></i>
                 <i class="fa fa-remove" style="display:none;"></i>
               </a>
-              <a href="#" class="menu-logo">
+              <a href="/negocios" class="menu-logo">
                 <img id="menu-logo" src="http://www.claro.com.pe/recursos_contenido/personas/d848845f-eb56-4403-bc7a-b8dcfa4ed521-images252Flogo-claro-blanco.png">
               </a>
             </div>
           </div>
           <div class="col-xs-4">
             <div class="derecha">
-              <a href="#">
+              <a href="http://asistencia.claro.com.pe/">
                 <i class="fa fa-search"></i>
               </a>
-              <a href="#">
+              <a href="https://www.miclaro.com.pe/">
                 <i class="fa fa-user"></i>
               </a>
             </div>
@@ -85,7 +85,7 @@
         </div>
       </a>
       <a href="#" class="ir-izquierda" menu="principal">
-        <div class="boton-segundo primero">
+        <div class="boton-segundo segundo">
           <div class="container">
             <div class="row">
               <div class="col-xs-8 col-xs-offset-2 texto">
@@ -125,12 +125,13 @@
           <div class="boton-segundo">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Servicios móviles</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -139,12 +140,13 @@
           <div class="boton-segundo">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Servicios fijos</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -170,12 +172,13 @@
           <div class="boton-segundo">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Soluciones móviles</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -201,12 +204,13 @@
           <div class="boton-segundo">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Colaboración</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -215,40 +219,43 @@
           <div class="boton-segundo">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Seguridad</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
         </a>
-        <a href="#" menu="presencia">
+        <a href="http://www.clarocloud.com.pe/portal/pe/cld/presencia-web/presencia-web/E66" menu="presencia">
           <div class="boton-segundo">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
-                  <span>Presencia Web</span>
+                <div class="col-xs-10 texto">
+                  <span>Presencia web</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
         </a>
-        <a href="#" menu="infraestructura">
+        <a href="http://www.clarocloud.com.pe/portal/pe/cld/infraestructura/servidores_virtuales/" menu="infraestructura">
           <div class="boton-segundo">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Infraestructura</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -257,7 +264,7 @@
 
       <div class="segundo-menu principal">
         <a href="#" class="regresar-derecha" menu="principal">
-          <div class="boton-segundo primero">
+          <div class="boton-segundo segundo">
             <div class="container">
               <div class="row">
                 <div class="col-xs-2 izquierda">
@@ -271,15 +278,16 @@
           </div>
         </a>
         <a href="/">
-          <div class="boton-segundo segundo">
+          <div class="boton-segundo primero">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Personas</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -288,12 +296,13 @@
           <div class="boton-segundo tercero">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Empresas</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -326,12 +335,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Telefonía móvil</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -340,12 +350,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Internet móvil</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -354,12 +365,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Recarga</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -368,12 +380,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Roaming</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -382,12 +395,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Portabilidad</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -396,12 +410,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Promociones</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -427,12 +442,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Telefonía fija</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -441,12 +457,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Internet fijo</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -455,12 +472,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Televisión</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -469,12 +487,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Paquetizados</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -483,12 +502,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Portabilidad</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -497,12 +517,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Promociones</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -532,12 +553,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
-                  <span>Directorio Móvil (eContact)</span>
+                <div class="col-xs-10 texto">
+                  <span>Directorio móvil (eContact)</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -546,12 +568,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
-                  <span>Monitoreo de Personal (eTrack)</span>
+                <div class="col-xs-10 texto">
+                  <span>Monitoreo de personal (eTrack)</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -560,12 +583,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
-                  <span>Seguridad Privada (eSecurity)</span>
+                <div class="col-xs-10 texto">
+                  <span>Seguridad privada (eSecurity)</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -574,12 +598,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Automatización de FFVV (eSales)</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -588,12 +613,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
-                  <span>Gestión de Tareas (eTask)</span>
+                <div class="col-xs-10 texto">
+                  <span>Gestión de tareas (eTask)</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -624,12 +650,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Office 365</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -638,12 +665,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
-                  <span>Correo Empresas</span>
+                <div class="col-xs-10 texto">
+                  <span>Correo empresas</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -652,12 +680,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
-                  <span>Conferencia Web</span>
+                <div class="col-xs-10 texto">
+                  <span>Conferencia web</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -683,12 +712,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
+                <div class="col-xs-10 texto">
                   <span>Respaldo en línea</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
@@ -697,12 +727,13 @@
           <div class="boton-tercer">
             <div class="container">
               <div class="row">
-                <div class="col-xs-2 izquierda">
+                <div class="col-xs-1 izquierda">
 
                 </div>
-                <div class="col-xs-8 texto">
-                  <span>Seguridad Empresas</span>
+                <div class="col-xs-10 texto">
+                  <span>Seguridad empresas</span>
                 </div>
+                <div class="col-xs-1"></div>
               </div>
             </div>
           </div>
