--- a/src/app/empresamenu/empresamenu.component.css
+++ b/src/app/empresamenu/empresamenu.component.css
@@ -76,7 +76,7 @@ a.menu-logo {
 }
 
 #menu-logo {
-    height: 25px;
+    height: 27px;
 }
 
 a.desplegar {
@@ -159,7 +159,7 @@ a.desplegar {
 @media only screen and (max-width: 767px) {
     .boton-primer .texto {
         text-align: center;
-        font-size: 18px;
+        font-size: 24px;
     }
     .boton-primer i {
         text-align: center;
@@ -170,12 +170,30 @@ a.desplegar {
 @media only screen and (min-width: 768px) {
     .boton-primer .texto {
         text-align: center;
-        font-size: 25px;
+        font-size: 28px;
     }
     .boton-primer i {
         text-align: center;
         font-size: 15px;
     }
+}
+
+@media only screen and (max-width: 767px) {
+    .contenido-menu .boton-segundo .texto {
+        font-size: 18px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .contenido-menu .boton-segundo .texto {
+        font-size: 22px;
+    }
+}
+
+.contenido-menu .boton-segundo, .contenido-menu .boton-segundo, .segundo-menu.principal {
+    -webkit-box-shadow: 0px 5px 15px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow: 0px 5px 15px rgba(50, 50, 50, 0.75);
+    box-shadow: 0px 5px 15px rgba(50, 50, 50, 0.75);
 }
 
 
@@ -188,7 +206,7 @@ a.desplegar {
     position: absolute;
     width: 100%;
     background: #da272c;
-    border-top: white 1px solid;
+    /*border-top: white 1px solid;*/
     color: white;
     top: 60px;
     visibility: hidden;
@@ -197,20 +215,23 @@ a.desplegar {
 
 .boton-segundo.primero {
     background: #ffffff;
+    border-bottom: 0px solid #ABAFB0;
 }
 
 .boton-segundo.segundo {
     background: #666666;
+    border-bottom: 0px solid #ABAFB0;
 }
 
 .boton-segundo.tercero {
     background: #000000;
+    border-bottom: 0px solid #ABAFB0;
 }
 
 @media only screen and (max-width: 767px) {
     .boton-segundo {
         height: 57px;
-        border-bottom: 1px solid #666666;
+        border-bottom: 1px solid #ABAFB0;
         background: #ffffff;
         color: #000000;
     }
@@ -223,14 +244,15 @@ a.desplegar {
     .boton-segundo .texto {
         text-align: center;
         font-size: 16px;
-        color: #68b8c8;
+        color: #1F97AE;
+        padding: 0px;
     }
 }
 
 @media only screen and (min-width: 768px) {
     .boton-segundo {
         height: 65px;
-        border-bottom: 1px solid #666666;
+        border-bottom: 1px solid #ABAFB0;
         background: #ffffff;
         color: #000000;
     }
@@ -243,26 +265,32 @@ a.desplegar {
     .boton-segundo .texto {
         text-align: center;
         font-size: 20px;
-        color: #68b8c8;
+        color: #1F97AE;
     }
 }
 
 .boton-segundo.primero .texto {
-    color: #666666;
+    color: black;
 }
 
 .boton-segundo.primero i {
-    color: #666666;
+    color: black;
 }
 
 .boton-segundo.segundo .texto {
     color: #ffffff;
-    opacity: 0.5;
+}
+
+.boton-segundo.segundo i {
+    color: #ffffff;
 }
 
 .boton-segundo.tercero .texto {
     color: #ffffff;
-    opacity: 0.5;
+}
+
+.boton-segundo.tercero i {
+    color: #ffffff;
 }
 
 @media only screen and (max-width: 767px) {
@@ -386,7 +414,7 @@ a.desplegar {
     .boton-tercer {
         color: white;
         height: 57px;
-        border-bottom: 1px solid #666666;
+        border-bottom: 1px solid #ABAFB0;
         background: #ffffff;
         color: #000000;
     }
@@ -399,7 +427,8 @@ a.desplegar {
     .boton-tercer .texto {
         text-align: center;
         font-size: 16px;
-        color: #68b8c8;
+        color: #1F97AE;
+        padding: 0px;
     }
     .boton-tercer .texto.principal {
         text-align: center;
@@ -417,7 +446,7 @@ a.desplegar {
     .boton-tercer {
         color: white;
         height: 65px;
-        border-bottom: 1px solid #666666;
+        border-bottom: 1px solid #ABAFB0;
         background: #ffffff;
         color: #000000;
     }
@@ -430,7 +459,7 @@ a.desplegar {
     .boton-tercer .texto {
         text-align: center;
         font-size: 20px;
-        color: #68b8c8;
+        color: #1F97AE;
     }
     .boton-tercer .texto.principal {
         text-align: center;
